# geoexplorer

./: App.tsx  README.md  api.ts  hooks.ts  index.html  metadata.json  package-lock.json  package.json
backend/: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  schema.sql  schema_auth.sql
backend/models/: __init__.py  ar_landform.py  auth.py  geo_feature.py  level.py  mistake.py  trivia.py  user.py
backend/routes/: __init__.py  ar_landforms.py  auth.py  geo_features.py  levels.py  mistakes.py  trivia.py  users.py
backend/services/: auth_service.py  supabase_client.py  verification_service.py
components/: BottomNav.tsx
pages/: ARView.tsx  Globe.tsx  Home.tsx  Levels.tsx  Mistakes.tsx
